--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -20,7 +20,19 @@ img:hover {
   text-decoration: none;
   color: #222;
   background-color: #f1f1f1;
-  border: 1px solid transparent;
+  border: 1px solid #777;
+}
+
+.food {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #777;
+  text-align: center;
+}
+
+.food:hover, .food:focus, .food:active {
+  border: 1px solid #f1f1f1;
+  box-shadow: 0 25px 50px -12px #673ab888;
 }
 
 .resource:hover {
