--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -28,16 +28,17 @@ img:hover {
 }
 
 .food {
-  padding: 0.5rem;
+  padding: 0.3rem;
   border-radius: 0.5rem;
   border: 1px solid #777;
   text-align: center;
-  width: 5rem;
-  height: 5rem;
+  width: 4.9rem;
+  height: 4.9rem;
   display: block;
   float: left;
   position: relative;
-  margin: 0.5rem;
+  margin: 0.3rem;
+  cursor: pointer;
 }
 
 .food .count {
@@ -76,7 +77,7 @@ img:hover {
 }
 
 .food .name {
-  font-size: 1rem;
+  font-size: 0.8rem;
   position: absolute;
   bottom: 0.5rem;
   left: 0;
